feat: Update Summary Layout with new charts and components
- Added axios, chart.js, chartjs-plugin-datalabels, and react-router-dom as dependencies.
- Refactored SummaryLayout component to include PieChart, RiskSummary, and StaffReplacementCosts components.
- Introduced DualBarChart component for visual representation of data.
- Removed unused HorizontalBarChart component and related pages.
- Updated index.js to use BrowserRouter for routing.
- Enhanced styles with new font sizes and improved layout structure.

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -42,6 +42,10 @@ body,
     @apply font-primary text-text text-xs 2xl_down:text-[10px] sm_down:text-4xs;
 }
 
+.text-size-xxs {
+    @apply font-primary text-text text-xxs;
+}
+
 /**
  * ------------------------------------------------------
  *  TITLES / HEADINGS
